--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <h2>Een conflict oplossen</h2>
                         <p>
                             Winnaar:
-                            <span id="winnaar">Chuck Norris</span>
+                            <span id="winnaar">Superman</span>
                         </p>
                     </div>
                     <div class="meta">
@@ -138,13 +138,8 @@
                         </li>
                         <li>
                             <strong>Conflict!</strong>
-                            <pre><code>
-                                <<<<<<< HEAD
-                                &lt;span id="winnaar"&gt;Superman&lt;/span&gt;
-                                =======
-                                &lt;span id="winnaar"&gt;Chuck&lt;/span&gt;
-                                >>>>>>> feature/chuck
-                                </code>
+                            <pre>
+                                <img src="images/CHUCKVSSUP.jpg"
                             </pre>
                         </li>
                         <li>Zorg dat <em>Chuck</em> de winnaar is.</li>
