--- a/index.html
+++ b/index.html
@@ -166,24 +166,24 @@
                 <section>
                     <ul>
                         <li>Ga naar de <strong>develop</strong> branch.</li>
-                        <li>Start een nieuwe release branch: <strong>release/{versie}</strong></li>
+                        <li>Start een nieuwe release branch: <strong>release/{2.0}</strong></li>
                         <li>
                             Pas de versie aan in de <em>index.html</em><br>
                             Boven aan de <em>index.html</em>, zie je de laatse <a href="#version">versie</a>,
-                            jouw <em>{versie}</em> is 1 cijfer hoger.
+                            jouw <em>{3,.0}</em> is 1 cijfer hoger.
                         </li>
                         <li>Commit deze aanpassing</li>
                         <li>Ga naar de <strong>develop</strong> branch</li>
                         <li>
                             <em>Merge</em> de aanpassingen van
-                            <strong>release/{versie}</strong> naar
+                            <strong>release/{3.0}</strong> naar
                             <strong>develop</strong>.
                         </li>
                         <li>Push de <strong>develop</strong> branch naar github</li>
                         <li>Ga naar de <strong>master</strong> branch</li>
                         <li>
                             <em>Merge</em> de aanpassingen van
-                            <strong>release/{versie}</strong> naar
+                            <strong>release/{3.0}</strong> naar
                             <strong>master</strong>.
                         </li>
                         <li>Push de <strong>master</strong> branch naar github</li>
