--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h2>Afbeeldingen toevoegen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/Meeting.png">
                     </div>
                 </header>
                 <section>
@@ -101,11 +101,11 @@
                         <h2>Een conflict oplossen</h2>
                         <p>
                             Winnaar:
-                            <span id="winnaar">Onbekend</span>
+                            <span id="winnaar">Chuck Norris</span>
                         </p>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/Commit.jpg">
                     </div>
                 </header>
 
@@ -139,11 +139,7 @@
                         <li>
                             <strong>Conflict!</strong>
                             <pre><code>
-                                <<<<<<< HEAD
-                                &lt;span id="winnaar"&gt;Superman&lt;/span&gt;
-                                =======
-                                &lt;span id="winnaar"&gt;Chuck&lt;/span&gt;
-                                >>>>>>> feature/chuck
+                              <img src="images/Commit.jpg">
                                 </code>
                             </pre>
                         </li>
@@ -160,7 +156,7 @@
                         <h2>Release</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/Release.jpg">
                     </div>
                 </header>
                 <section>
