--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <h2>Een conflict oplossen</h2>
                         <p>
                             Winnaar:
-                            <span id="winnaar">ChuckNorris</span>
+                            <span id="winnaar">Superman</span>
                         </p>
                     </div>
                     <div class="meta">
